# Reaction-Wheel-Roll-Control-Firmware-and-Live-Telemetry

./: CMakeLists.txt  README.md  fft_1772855272.json  telemetry_1772855272.csv
main/: CMakeLists.txt  can_sim.py  config.h  fft.py  ground_control.py  main.c  mqtt.py  telemetry.py
main/components/blink/: blink.c  blink.h
main/components/imu/: imu.c  imu.h  pid.c  pid.h  spi.c  spi.h
main/components/spi/: spi.c
main/components/twai/: twai.c  twai.h
main/datastreaming/: mqtt.c  mqtt.h  wifi.c  wifi.h
main/pid/: pid.c  pid.h
main/statemachine/: statemachine.c  statemachine.h
