idf_component_register(
    SRCS 
        "main.c"
        "components/blink/blink.c"
        "components/twai/twai.c"
        "components/imu/spi.c"
        "components/imu/imu.c"
        "components/imu/pid.c"
        "statemachine/statemachine.c"
        "datastreaming/wifi.c"
        "datastreaming/mqtt.c"
    INCLUDE_DIRS 
        "."
        "components/blink"
        "components/twai"
        "components/imu"
        "statemachine"
        "datastreaming"
        
)